# beatbank

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  Main.css  bindings.ts  reset.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.config/: beatbank.db
src-tauri/src/: audio.rs  db.rs  main.rs
src/beats/: beats.json
src/components/: AudioPlayer.tsx  BeatJockey.tsx  BeatList.tsx  BeatSet.tsx  BeatTable.tsx  DraggableRow-old.jsx  DraggableRow.tsx  EditBeatCard.tsx  Header.tsx  JockeyControls.tsx  RowDragHandleCell.tsx  RowPlayHandleCell.tsx  SearchBar.tsx  SettingsDropdown.tsx  Sidebar.tsx
src/hooks/: useBeats.tsx
src/models/: columns.tsx
src/pages/: Bank.tsx  BeatJockey.tsx  BeatSet.tsx  Home.tsx  Search.tsx
